<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/news">


    <fragment
        android:id="@+id/news"
        tools:layout="@layout/fragment_news"
        android:label="@string/news_fragment"
        android:name="com.example.practiceapp.NewsFragment"/>

    <fragment
        android:id="@+id/sports"
        tools:layout="@layout/fragment_sports"
        android:label="@string/sport_fragment"
        android:name="com.example.practiceapp.SportsFragment"/>

    <fragment
        android:id="@+id/science"
        tools:layout="@layout/fragment_science"
        android:label="@string/science_fragment"
        android:name="com.example.practiceapp.ScienceFragment"/>

</navigation>