<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:id="@+id/indicator"
    tools:context=".BMIActivity">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="200dp"
        android:layout_height="300dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="center">
            <EditText
                android:id="@+id/edt_txt1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/height"
                android:inputType="numberDecimal"/>

            <EditText
                android:id="@+id/edt_txt2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/weight"
                android:inputType="numberDecimal" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/calc_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bmi"
                android:layout_marginTop="11dp"
                android:textAllCaps="false"/>

            <TextView
                android:id="@+id/txtview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/result"
                android:layout_marginTop="11dp"/>



            <TextView
                android:id="@+id/txtView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/value"
                android:layout_marginTop="11dp"/>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</LinearLayout>